--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,12 @@
   --accent-color: #e7e9fc;
 }
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 body {
   color: var(--body-text-color);
   background-color: #fff;
@@ -24,15 +30,23 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
+
 h1,
 h2,
 h3,
 h4,
 h5,
 h6,
-p {
+p
+{
   margin: 0;
 }
+
+ul {
+  margin: 0;
+  padding: 0;
+}
+
 header {
   border-bottom: 1px solid #e7e9fc;
 }
@@ -42,7 +56,18 @@ header {
   margin: 0 auto;
   outline: solid 1px green;
 }
+
+.section {
+  padding: 120px 0;
+  outline: solid 1px tomato;
+}
+/* -----------HEADER------------------------- */
 /* logo */
+.header-container {
+  display: flex;
+  align-items: center;
+}
+
 .logo {
   color: var(--title-background-color);
   text-decoration: none;
@@ -53,16 +78,12 @@ header {
   letter-spacing: 0.03em;
   text-transform: uppercase;
 }
+
 .logo-accent {
   color: var(--primary-brand-color);
 }
 
 /* Site nav */
-.header-container {
-  padding-top: 24px;
-  padding-bottom: 24px;
-  outline: solid 1px tomato;
-}
 
 .list {
   padding: 0;
@@ -71,33 +92,51 @@ header {
 }
 
 .link {
-  
+  padding-top: 24px;
+  padding-bottom: 24px;
   text-decoration: none;
 }
 
 .site-nav {
- 
-  
+  display: flex;
   color: var(--title-background-color);
 }
+
 .site-nav .link {
+  display: block;
   color: inherit;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
-.contact-nav {
-  
+
+.site-nav-item + .site-nav-item {
+  margin-left: 40px;
 }
+
+.contact-nav {
+  display: flex;
+}
+
 .contact-nav .link {
+  display: block;
   color: var(--body-text-color);
   font-style: normal;
 }
 
+.contact-nav-item + .contact-nav-item {
+  margin-left: 40px;
+}
+
+.site-link:hover,
+.site-link.current {
+  border-bottom: var(--pressed-state-color) solid 2px;
+  border-radius: 2px;
+}
+
 .link:hover,
-.link:focus,
-.link.current {
+.link:focus {
   color: var(--pressed-state-color);
 }
 
@@ -110,7 +149,6 @@ header {
   background-color: var(--title-background-color);
   text-align: center;
   outline: solid 1px tomato;
-
 }
 
 .hero-title {
@@ -160,10 +198,7 @@ header {
   clip-path: inset(50%);
   margin: -1px;
 }
-.features-section{
-  padding: 120px 0;
-  outline: solid 1px tomato;
-}
+
 .features-subtitle {
   margin-bottom: 8px;
   color: var(--title-background-color);
@@ -174,8 +209,6 @@ header {
 }
 
 .features-list {
-  
-
 }
 
 .features-descr {
@@ -184,8 +217,7 @@ header {
 /* What are we doing */
 
 .work-section {
-  padding-bottom: 120px;
-  outline: solid 1px tomato;
+  padding-top: 0;
 }
 
 .work-title {
@@ -198,17 +230,15 @@ header {
   letter-spacing: 0.02em;
   text-transform: capitalize;
 }
-.work-photo{
+.work-photo {
+  display: block;
   border: 1px solid var(--accent-color);
 }
 
 /* Team section */
 
 .team-section {
-  padding-top: 120px;
-  padding-bottom: 120px;
   background-color: var(--light-accent-color);
-  outline: solid 1px tomato;
 }
 
 .team-title {
@@ -233,10 +263,10 @@ header {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   border-radius: 0px 0px 4px 4px;
-
 }
 
 .team-photo {
+  display: block;
   margin-bottom: 32px;
 }
 
