--- a/css/styles.css
+++ b/css/styles.css
@@ -48,7 +48,7 @@ ul {
 }
 
 header {
-  border-bottom: 1px solid #e7e9fc;
+  border-bottom: 1px solid var(--accent-color);
 }
 .container {
   width: 1158px;
