--- a/css/styles.css
+++ b/css/styles.css
@@ -68,6 +68,11 @@ header {
   align-items: center;
 }
 
+.header-nav{
+  display: flex;
+  align-items: center;
+}
+
 .logo {
   color: var(--title-background-color);
   text-decoration: none;
@@ -99,6 +104,7 @@ header {
 
 .site-nav {
   display: flex;
+  margin-left: 76px;
   color: var(--title-background-color);
 }
 
@@ -114,13 +120,17 @@ header {
 .site-nav-item + .site-nav-item {
   margin-left: 40px;
 }
+.contact{
+  display: flex;
+  margin-left: auto;
+}
 
 .contact-nav {
   display: flex;
 }
 
 .contact-nav .link {
-  display: block;
+  /* display: block; */
   color: var(--body-text-color);
   font-style: normal;
 }
@@ -128,6 +138,8 @@ header {
 .contact-nav-item + .contact-nav-item {
   margin-left: 40px;
 }
+
+
 
 .site-link:hover,
 .site-link.current {
@@ -152,13 +164,11 @@ header {
 }
 
 .hero-title {
-  margin-top: 0;
   margin-bottom: 48px;
   color: #ffffff;
   font-weight: 700;
   font-size: 56px;
   line-height: 1.07;
-  text-align: center;
   letter-spacing: 0.02em;
 }
 .hero-button {
@@ -209,6 +219,7 @@ header {
 }
 
 .features-list {
+display: flex;
 }
 
 .features-descr {
